# ros2-scalability

./: plot.py  plot_drop.py  plot_nw.py  plot_recv.py  plot_send.py  serial.py
src/template/: CMakeLists.txt  package.xml
src/template/include/: common.hpp  pubsub.h  pubsub.hpp
src/template/launch/: ends.py  launch.py  middle.py
src/template/msg/: Payload.msg
src/template/src/: pub.cpp  pubsub.cpp  sub.cpp
